# neuroim-python

./: .gitignore  .golden_sync.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  FEATURE_PARITY.md  LICENSE  MIGRATING_FROM_R.md  MISSION.md  Makefile  PARITY_COMPLETION_AUDIT.md  PERFORMANCE_ISSUES.md  README.md  ROADMAP.md  R_to_Python_test_mapping.md  STABILITY.md  TRANSLATION_STRATEGY.md  VISION.md  conftest.py  manifest  pyproject.toml  pytest.ini  test_notebooks.py  test_notebooks_simple.py
.beads/: config.yaml  issues.jsonl  metadata.json
.github/workflows/: docs.yml  release.yml  tests.yml
archive/: FINAL_TEST_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  ROI_FIXES_SUMMARY.md  SKIPPED_TESTS_ANALYSIS.md  TEST_REPORT.md
bench/: REPORT.md  run_benchmarks.py
docs/: .gitignore  DOCUMENTATION_LOCATIONS.md  GITHUB_PAGES_INTEGRATION.md  Makefile  TEST_PARITY_SUMMARY.md  _quarto.yml  _quartodoc.yml  _variables-dark.scss  _variables.scss  api-map.qmd  atlas.md  convert_rst_to_notebooks.py  get-started.qmd  index.qmd  neurohypervec_guide.md  objects.json  quickstart.md  requirements-docs.txt  scenarios.md  styles.css
docs/_archive/: neurohypervec_guide.md  neuroim2_test_analysis.md
docs/_includes/: evidence_scan.py  lifecycle.qmd
docs/_plan/: excellent-docs.md
docs/concepts/: atlas.qmd  contract-failures.qmd  images.qmd  index.qmd  provenance.qmd  receipt.qmd  roi-result.qmd  space.qmd  voxel-series-store.qmd
docs/cookbook/: audit-a-derived-map.qmd  cross-subject-concat-with-contracts.qmd  extract-timeseries-at-coordinate.qmd  handoff-to-multiprocessing.qmd  index.qmd  interop-with-nibabel.qmd  parcel-timeseries-from-atlas.qmd  save-derived-map-with-provenance.qmd  use-with-numpy-scipy-sklearn.qmd
docs/evidence/: index.qmd
docs/porting/: MIGRATING_FROM_R.md  README.md  R_PYTHON_MAPPING.md  TRANSLATION_STRATEGY.md
docs/reference/: DenseNeuroHyperVec.qmd  DenseNeuroVec.qmd  DenseNeuroVol.qmd  LogicalNeuroVol.qmd  NeuroSpace.qmd  SparseNeuroHyperVec.qmd  SparseNeuroVec.qmd  SparseNeuroVol.qmd  _sidebar.yml  bilateral_filter.qmd  conn_comp.qmd  cuboid_roi.qmd  gaussian_blur.qmd  index.qmd  neurovec.qmd  neurovol.qmd  plot_montage.qmd  plot_neuro_vol.qmd  plot_ortho.qmd  plot_overlay.qmd  read_vec.qmd  read_vol.qmd  reorient.qmd  resample.qmd  searchlight.searchlight_iterator.qmd  spherical_roi.qmd  write_vec.qmd  write_vol.qmd
docs/source/: changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  quickstart.rst
docs/spec/: contract-failure-vocabulary.md  neuromaps-integration-design.md  receipt-nifti-extension.md  space-invariants.md  voxel-series-store-protocol.md
docs/start/: 01-image.qmd  02-space.qmd  03-roi.qmd  04-derived-maps.qmd  05-roundtrip.qmd  index.qmd
docs/tutorials/: core-objects.qmd  index.qmd
examples/: neurohypervec_demo.py  orthogonal_slices_demo.py
examples/draw_audit/: REPORT.md  __init__.py  baseline_nibabel.py  neuroim_rewrite.py  test_audit.py
examples/scenarios/: README.md  __init__.py  conftest.py  test_s01_mni_spotlight.py  test_s02_roi_mean_timeseries.py  test_s02_seed_sphere_mean.py  test_s03_seed_sphere_mean.py  test_s04_temporal_snr_map.py  test_s05_receipt_io_boundary.py  test_s06_public_seed_correlation.py  test_s07_multi_subject_concat.py  test_s08_pickle_multiprocessing_handoff.py  test_s09_native_to_template_provenance.py  (+4 more)
golden/: GOLDEN_TESTS.md
golden_tests/: README.md  SYNC_GUIDE.md  sync_golden_tests.py
tests/: R_PYTHON_TEST_PARITY.md  conftest.py  test_afni_io.py  test_array_refusal.py  test_atlas.py  test_backend_dtype_roundtrip.py  test_clustered_neuro_vec.py  test_clustered_neuro_vol.py  test_compat_api.py  test_concat_space_contract.py  test_connected_components.py  test_coordinate_systems.py  test_coordinate_transformations.py  test_dense_neuro_vol.py  test_docs_quickstart.py  test_edge_cases.py  test_exceptions_hierarchy.py  test_file_backed_neuro_vec.py  test_fixture_realistic_bold.py  test_flagship_workflow.py  test_fragility_invariants.py  test_graph_filter.py  test_image_processing.py  test_index_lookup_vol.py  test_indexing.py  test_install_aliases.py  test_io_comprehensive.py  test_memory_efficiency.py  test_memory_mapped.py  test_neuro_bucket.py  test_neuro_hypervec.py  test_neuro_space.py  test_neuro_vec_seq.py  test_neurohypervec.py  test_neurovec_comprehensive.py  test_neurovec_edge_cases.py  test_neurovol_comprehensive.py  test_neurovol_edge_cases.py  test_nibabel_interop.py  test_nifti_extension.py  (+71 more)
tools/: docs_lint.py  verify_evidence.py  verify_install.py
(+287 files in other folders)
