[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuroim"
version = "0.1.0"
description = "Python neuroimaging library"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Brad Buchsbaum", email = "bbuchsbaum@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "nibabel>=3.0.0",
    "matplotlib>=3.3.0",
    "scikit-learn>=0.24.0",
    "h5py>=3.0.0",
    "joblib>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "nbconvert>=7.0.0",
    "nbformat>=5.7.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.900",
]
docs = [
    "quartodoc>=0.7",
    "griffe<2",
    "jupyter",
    "nbclient",
    "nbformat>=5.7.0",
    "sphinx>=7.0",
    "pydata-sphinx-theme>=0.15",
    "numpydoc>=1.6",
    "sphinx-copybutton>=0.5",
    "sphinx-design>=0.5",
    "sphinx-remove-toctrees>=0.0.9",
    "myst-nb>=1.0",
    "ipykernel>=6.0",
]

[project.urls]
"Homepage" = "https://github.com/bbuchsbaum/neuroim-python"
"Documentation" = "https://bbuchsbaum.github.io/neuroim-python/"
"Bug Tracker" = "https://github.com/bbuchsbaum/neuroim-python/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

[tool.neuroim.deprecated-package-names]
neuroimpy = "Deprecated alias for neuroim; removal planned after 0.3."
pyneuroim = "Deprecated alias for neuroim; removal planned after 0.3."
